@@ -12,6 +12,6 @@ defined('_JEXEC') or die;
 // Include the syndicate functions only once
 require_once __DIR__ . '/helper.php';
 
-$langs	= ModLoginHelper::getLanguageList();
-$return	= ModLoginHelper::getReturnURI();
+$langs  = ModLoginHelper::getLanguageList();
+$return = ModLoginHelper::getReturnURI();
 require JModuleHelper::getLayoutPath('mod_login', $params->get('layout', 'default'));
